--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ui.KeyboardDemoActivity" />
         <activity android:name=".ui.ToolbarDemoActivity" />
+        <activity android:name=".ui.ActionModeDemoActivity" />
     </application>
 
 </manifest>
