--- a/remoteservice/src/main/AndroidManifest.xml
+++ b/remoteservice/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testapp">
+    package="com.eben.longjunhao.remoteservice">
 
     <application
         android:allowBackup="true"
@@ -16,11 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.KeyboardDemoActivity" />
-        <activity android:name=".ui.ToolbarDemoActivity" />
-        <activity android:name=".ui.ActionModeDemoActivity" />
-        <activity android:name=".ui.SwipeLayoutDemoActivity" />
-        <activity android:name=".ui.AidlDemoActivity"></activity>
+
+        <service
+            android:name=".RemoteService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.eben.longjunhao.remoteservice" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
