--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,19 @@
         <activity android:name=".ui.ActionModeDemoActivity" />
         <activity android:name=".ui.SwipeLayoutDemoActivity" />
         <activity android:name=".ui.AidlDemoActivity" />
-        <activity android:name=".ndkjnisoDemo.NdkJniSoDemoActivity"></activity>
+        <activity android:name=".ndkjnisoDemo.NdkJniSoDemoActivity" />
+
+        <receiver android:name=".AppWidgetDemo.MyAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/my_app_widget_info" />
+        </receiver>
+
+        <activity android:name=".AppWidgetDemo.AppWidgetDemoActivity"></activity>
     </application>
 
 </manifest>
