--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
                 android:resource="@xml/my_app_widget_info" />
         </receiver>
 
-        <activity android:name=".AppWidgetDemo.AppWidgetDemoActivity"></activity>
+        <activity android:name=".AppWidgetDemo.AppWidgetDemoActivity" />
+        <activity android:name=".PreferencesDemo.PreferencesDemoActivity" />
+        <activity
+            android:name=".PreferencesDemo.DefaultGenerationSetting.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
